--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:name=".SuppleTrackApp"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Material3.DayNight.NoActionBar">
+        android:theme="@style/Theme.SuppleTrack">
         <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
