--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.efvs.suppletrack">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -25,7 +28,10 @@
                 android:resource="@xml/widget_info" />
         </receiver>
 
+        <!-- Push Notification Receiver für Reminder -->
+        <receiver android:name=".MissedDoseReceiver" android:exported="false"/>
+        <receiver android:name=".DoseTakenReceiver" android:exported="false"/>
+
     </application>
 
 </manifest>
-
